--- a/bgi/bgi.vcxproj
+++ b/bgi/bgi.vcxproj
@@ -74,6 +74,7 @@
     <ClCompile Include="main.cxx" />
     <ClCompile Include="Piece.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Source.cpp" />
     <ClCompile Include="text.cxx" />
     <ClCompile Include="winbgi.cxx" />
     <ClCompile Include="winthread.cxx" />
