--- a/bgi/bgi.vcxproj
+++ b/bgi/bgi.vcxproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <ClCompile Include="bgiout.cxx" />
     <ClCompile Include="Board.cpp" />
+    <ClCompile Include="BOX.cpp" />
     <ClCompile Include="dibutil.cxx" />
     <ClCompile Include="Dice.cpp" />
     <ClCompile Include="drawing.cxx" />
@@ -81,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h" />
+    <ClInclude Include="BOX.h" />
     <ClInclude Include="dibutil.h" />
     <ClInclude Include="Dice.h" />
     <ClInclude Include="graphics.h" />
